# media-to-ascii

./: .gitignore  CAMERA_FEATURE.md  Cargo.toml  README.md  build_python.sh  pyproject.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yml  macos-build.yml  main.yml  ubuntu-build.yml  windows-build.yml
codecs/: libopenh264-1.8.0-osx64.4.dylib
mediatoascii/: Cargo.toml  devtool
mediatoascii-app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
mediatoascii-app/src/: App.vue  main.ts  style.css
mediatoascii-app/src-tauri/: Cargo.toml  tauri.conf.json
mediatoascii-app/src-tauri/capabilities/: default.json
mediatoascii-app/src-tauri/src/: lib.rs  main.rs
mediatoascii-app/src/image/: Image.vue  image.ts
mediatoascii-app/src/video/: Video.vue  video.ts
mediatoascii-cli/: Cargo.toml
mediatoascii-cli/src/: main.rs
mediatoascii/src/: lib.rs
mediatoascii/src/image/: image.rs  mod.rs
mediatoascii/src/util/: constants.rs  ffmpeg.rs  file_util.rs  mod.rs
mediatoascii/src/video/: encoder.rs  errors.rs  ffmpeg.rs  mod.rs  opencv.rs  reader.rs  video.rs  writer.rs
python/: README.md
python/examples/: example.py
python/mediatoascii/: __init__.py
src/: lib.rs  main.rs
src/image/: image.rs  mod.rs
src/util/: constants.rs  file_util.rs  mod.rs
src/video/: mod.rs  video.rs
