[package]
name = "mediatoascii"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["spoorn"]
homepage = "https://github.com/spoorn/media-to-ascii"
repository = "https://github.com/spoorn/media-to-ascii"
docmentation = "https://github.com/spoorn/media-to-ascii"
keywords = ["ascii", "cli", "media-to-ascii", "mediatoascii", "media", "image", "video", "opencv"]
categories = ["command-line-utilities", "computer-vision", "encoding", "multimedia", "multimedia::encoding"]
readme = "README.md"
description = """
CLI and utilities for converting media files (images/videos) to ascii outputs (output media file or print to console).  
Supports most standard image formats, and video formats.
"""
exclude = ["examples/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
derive_builder = "0.11.2"
image = "0.24.3"
imageproc = "0.23.0"
indicatif = "0.17.1"
once_cell = "1.14.0"
opencv = "0.68.0"
rusttype = "0.9.2"
