[package]
name = "mediatoascii"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["spoorn"]
homepage = "https://github.com/spoorn/media-to-ascii"
repository = "https://github.com/spoorn/media-to-ascii"
documentation = "https://github.com/spoorn/media-to-ascii"
keywords = ["ascii", "cli", "image", "video", "opencv"]
categories = ["command-line-utilities", "computer-vision", "encoding", "multimedia", "multimedia::encoding"]
readme = "README.md"
description = """
CLI and utilities for converting media files (images/videos) to ascii outputs (output media file or print to console).  
Supports most standard image formats, and video formats.
"""
exclude = ["examples/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.28"
clap = { version = "4.5.17", features = ["derive"] }
derive_builder = "0.20.1"
image = "0.25.2"
imageproc = "0.25.0"
indicatif = "0.17.8"
opencv = { version = "0.92.3", default-features = false, features = ["videoio"] }
rayon = "1.10.0"
rusttype = "0.9.3"

[profile.release]
lto = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ target }-{ version }{ archive-suffix }"
bin-dir = "{ bin }"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-x86_64-unknown-linux-gnu-{ version }{ archive-suffix }"
